# ej_test_gen

./: .gitignore  LICENSE  README.md  README.rst  contest_tester.py  dummy_sol.py  ej_test_gen.py  gen_tests.py  pyproject.toml  setup.py  sol.py  test_creator.py
ej_test_gen/: __init__.py  ej_test_gen.py  sol.py
example/: sol.cpp  test_creator.py
example/A_py/: test_creator_py.py
example/B_cpp/: test_creator_cpp.py
src/ej_test_gen/: __about__.py  __init__.py  ej_test_gen.py
